--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.2"
   },
   "main": "dist/cjs/index.js",
