--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
   "name": "trm",
-  "version": "1.0.0",
-  "description": "tbd",
-  "scripts": {
-    "rollup": "rollup -c"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/laureanray/trm.git"
-  },
-  "author": "Laurean Ray Bahala",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/laureanray/trm/issues"
-  },
-  "homepage": "https://github.com/laureanray/trm#readme",
+  "type": "module",
   "devDependencies": {
+    "bun-types": "^0.1.0"
+  },
+  "dependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "rollup": "^2.79.0",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.8.2"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "package.json"
   ],
-  "types": "dist/index.d.ts"
+  "private": false,
+  "scripts": {
+    "prebuild": "rm -rf dist",
+    "rollup-watch": "rollup -c -w",
+    "build": "bun run prebuild && rollup -c"
+  }
 }
