--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-
-    "jsx": "react",
-    "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
+    "lib": ["ESNext"],
+    "module": "esnext",
+    "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
-    "moduleResolution": "node",
+    "strict": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "jsx": "react",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "types": ["bun-types"],
+    "declaration": true,
+    "declarationDir": "types",
     "emitDeclarationOnly": true
   }
 }
